--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,10 @@
         <input id="course-name" type='text' name="course" action="{{ url_for('results_page', course=course) }}" autocomplete="off"/>
         <input type='submit' value='Search'/>
     </form>
-
-    <div id="course-data">
-        Results for: {{ course }}
+    <div id ="course-results-title">
+        Results for: {{course}}
     </div>
+    <div id="course-data">{{ results }}</div>
+    <script type="text/javascript" src="{{ url_for('static', filename='search.js') }}"></script>
 </body>
 </html>
